--- a/materials.html
+++ b/materials.html
@@ -13,7 +13,7 @@
   </body>
 </html>
 <script>
-  let scene, camera, renderer;
+  let scene, camera, renderer, normals1, normals2;
   let ADD = 0.01;
 
   const createCube = (objectData) => {
@@ -22,13 +22,18 @@
       objectData.yScale,
       objectData.zScale
     );
-    let material = new THREE.MeshBasicMaterial({
-      color: Math.random() * 0xffffff,
-    });
+    // let material = new THREE.MeshBasicMaterial({
+    //   color: Math.random() * 0xffffff,
+    //   opacity: 0.5,
+    //   transparent: true,
+    // });
+
+    const material = new THREE.MeshNormalMaterial();
     const cubeOut = new THREE.Mesh(geometry, material);
     cubeOut.position.x = objectData.xPos;
     cubeOut.position.y = objectData.yPos;
     cubeOut.position.z = objectData.zPos;
+
     return cubeOut;
   };
 
@@ -41,7 +46,6 @@
     );
     let material = new THREE.MeshBasicMaterial({
       color: Math.random() * 0xffffff,
-      //   wireframe: true,
     });
     const planeOut = new THREE.Mesh(geometry, material);
     planeOut.rotation.x = objectData.xRot;
@@ -78,6 +82,7 @@
     yPos: -5,
     zPos: -6,
   });
+
   const cube2 = createCube({
     xScale: 5,
     yScale: 5,
@@ -86,6 +91,7 @@
     yPos: -5,
     zPos: 6,
   });
+
   const plane = createPlane({
     xScale: 30,
     yScale: 30,
@@ -94,7 +100,9 @@
     xRot: -Math.PI / 2,
   });
   scene.add(cube1);
+
   scene.add(cube2);
+
   scene.add(plane);
   scene.add(new THREE.AxesHelper());
 
